Lab04 Marco solved

--- a/lab-python-list-comprehension.ipynb
+++ b/lab-python-list-comprehension.ipynb
@@ -75,6 +75,278 @@
     "\n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "8f10f9cf-5817-4f55-81c6-bafb3a8c504c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the quantity of t-shirts available:  1\n",
+      "Enter the quantity of mugs available:  2\n",
+      "Enter the quantity of hats available:  3\n",
+      "Enter the quantity of books available:  4\n",
+      "Enter the quantity of keychains available:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inventory:  {'t-shirt': 1, 'mug': 2, 'hat': 3, 'book': 4, 'keychain': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1\n",
+    "\n",
+    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "\n",
+    "def initialize_inventory(products):\n",
+    "    inventory = {product: int(input(f\"Enter the quantity of {product}s available: \")) for product in products}\n",
+    "    return inventory\n",
+    "\n",
+    "inventory = initialize_inventory(products)\n",
+    "print(\"Inventory: \", inventory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "6ee1382c-04fd-4ccd-95e9-60993537f487",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many items would you like to order? 1\n",
+      "Enter item 1:  mug\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Customer order: {'mug'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2\n",
+    "\n",
+    "def get_customer_orders():\n",
+    "    num_of_orders = int(input(\"How many items would you like to order?\"))\n",
+    "    customer_orders = set(input(f\"Enter item {i+1}: \") for i in range(num_of_orders))\n",
+    "    return customer_orders\n",
+    "\n",
+    "customer_orders = get_customer_orders()\n",
+    "print (\"Customer order:\", customer_orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "3f0e3e9b-4d25-49b4-8c78-8c5cd2402273",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_order_statistics(customer_orders, products):\n",
+    "    total_products_ordered = len(customer_orders)\n",
+    "    percentage_ordered = (total_products_ordered / len(products)) * 100\n",
+    "    return total_products_ordered, percentage_ordered\n",
+    "\n",
+    "order_statistics = calculate_order_statistics(customer_orders, products)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "07cca77c-0f36-4bf3-8944-a8d91509dd18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order Statistics:\n",
+      "Total Products Ordered: 1\n",
+      "Percentage of Unique Products Ordered: 20.00 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_order_statistics(order_statistics):\n",
+    "    print(\"Order Statistics:\")\n",
+    "    print(f\"Total Products Ordered: {order_statistics[0]}\")\n",
+    "    print(f\"Percentage of Unique Products Ordered: {order_statistics[1]:.2f} %\")\n",
+    "    return\n",
+    "\n",
+    "print_order_statistics(order_statistics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "ebc0b075-3686-471c-9cf3-96d893e53897",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated Inventory:\n",
+      "t-shirt: 1\n",
+      "mug: 1\n",
+      "hat: 3\n",
+      "book: 4\n",
+      "keychain: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4\n",
+    "\n",
+    "def update_inventory(customer_orders, inventory):\n",
+    "    print(\"Updated Inventory:\")\n",
+    "    update = [inventory.update({product: inventory[product] - 1}) for product in inventory if product in customer_orders]\n",
+    "    [print(f\"{product}: {quantity}\") for product, quantity in inventory.items() if quantity >0 ]\n",
+    "    return\n",
+    "\n",
+    "update_inventory(customer_orders, inventory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "8752b1a0-c975-4de6-b25a-57cab473f624",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the individual price of 'mug':  4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3\n",
+    "\n",
+    "def order_price(customer_list):\n",
+    "    price = sum(float(input(f\"Enter the individual price of '{item}': \")) for item in customer_list)\n",
+    "    return price\n",
+    "\n",
+    "order_price(customer_orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "16394c08-be22-4c8e-9bab-6de94698db33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the quantity of t-shirts available:  1\n",
+      "Enter the quantity of mugs available:  2\n",
+      "Enter the quantity of hats available:  3\n",
+      "Enter the quantity of books available:  4\n",
+      "Enter the quantity of keychains available:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many items would you like to order? 2\n",
+      "Enter item 1:  mug\n",
+      "Enter item 2:  book\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Order Statistics:\n",
+      "Total Products Ordered: 2\n",
+      "Percentage of Unique Products Ordered: 40.00 %\n",
+      "\n",
+      "Updated Inventory:\n",
+      "t-shirt: 1\n",
+      "mug: 1\n",
+      "hat: 3\n",
+      "book: 3\n",
+      "keychain: 5\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the individual price of 'mug':  4\n",
+      "Enter the individual price of 'book':  6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "print(\"\")\n",
+    "inventory = initialize_inventory(products)\n",
+    "print(\"\")\n",
+    "customer_orders = get_customer_orders()\n",
+    "print(\"\")\n",
+    "order_statistics = calculate_order_statistics(customer_orders, products)\n",
+    "print(\"\")\n",
+    "print_order_statistics(order_statistics)\n",
+    "print(\"\")\n",
+    "update_inventory(customer_orders, inventory)\n",
+    "print(\"\")\n",
+    "order_price(customer_orders)"
+   ]
   }
  ],
  "metadata": {
@@ -93,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
